--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "santigarcor/laratrust": "^6.3",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
